# Home_Work_WEB_14

./: .coverage  .env.example  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 0533d3c7822c_init.py  4280ea71d295_add_user_role.py  8b76b07e6db6_added_reset_token_to_users.py  94987526bb05_updated.py  fe53fcd69d60_add_user_verifivation.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619
postgres-data/base/16384/: 1247  1249  1249_fsm  1255  1255_fsm  1255_vm  1259  2224  2579  2604  2606  2608  2609  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2675  2678  2679  2690  2691  2699  2701  2702  2703  2704  3079  3080  3081  (+7 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: schemas.py  user.py
src/services/: auth.py  email.py  roles.py
tests/: conftest.py  test_config.py  test_db.py  test_e2e_routes_auth.py  test_e2e_routes_contacts.py  test_e2e_routes_users.py  test_roles.py  test_unit_repository_contacts.py  test_unit_repository_users.py
