[tool.poetry]
name = "module-14-home-work-web"
version = "0.1.0"
description = ""
authors = ["AndriKovalchuk <andrii.kovalchuk90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
email-validator = "^2.1.1"
python-multipart = "^0.0.9"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
gravatar = "^0.1"
asyncpg = "^0.29.0"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
redis = "^5.0.3"
fastapi-limiter = "^0.1.6"
jinja2 = "^3.1.3"
cloudinary = "^1.39.1"
coverage = "^7.4.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests",]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"